Added first item, nag logo, 2nd parallax.

--- a/_/components/less/_mystyles.less
+++ b/_/components/less/_mystyles.less
@@ -2,6 +2,9 @@ body {
 	padding-top: 50px;
 	font-family: 'Raleway', sans-serif;
 }
+.thumbnail {
+	border: none;
+}
 #intro { 
 	background: url(../../images/backgrounds/glenn-jackson-2000x500.jpg) 50% 0 fixed; 
 	height: 300px;  
@@ -10,6 +13,8 @@ body {
     position: relative; 
     box-shadow: 0 0 50px rgba(0,0,0,0.8);
     padding: 100px 0;
+    text-align: center;
+    color: #fff;
 }
 #home { 
 	height: auto;  
@@ -17,15 +22,24 @@ body {
     width: 100%; 
     position: relative; 
     box-shadow: 0 0 50px rgba(0,0,0,0.8);
-    padding: 50px 0;
+    padding: 100px 0;
 }
-#about { 
-	background: url(images/about.png) 50% 0 fixed; 
-	height: auto;
+#inter1 { 
+	background: url(../../images/backgrounds/st-johns-bridge-2000x1125.jpg) 50% 0 fixed; 
+	height: 300px;  
 	margin: 0 auto; 
     width: 100%; 
     position: relative; 
     box-shadow: 0 0 50px rgba(0,0,0,0.8);
     padding: 100px 0;
+    text-align: center;
     color: #fff;
+}
+#item { 
+	height: auto;  
+	margin: 0 auto; 
+    width: 100%; 
+    position: relative; 
+    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    padding: 200px 0;
 }
