Added smooth scroll, back to top button.

--- a/_/components/less/_mystyles.less
+++ b/_/components/less/_mystyles.less
@@ -1,3 +1,7 @@
+html, body {
+  width: auto !important;
+  overflow-x: hidden !important;
+}
 body {
 	padding-top: 50px;
 	font-family: 'Raleway', sans-serif;
@@ -69,4 +73,40 @@ body {
 }
 .carousel-indicators .active {
     background-color: #777;
+}
+footer {
+    padding: 2em 0;
+    text-align: center;
+}
+.go-top {
+    display: none;
+    position: fixed;
+    bottom: 2em;
+    right: 2em;
+    text-decoration: none;
+    width: 50px;
+    height: 50px;
+    -webkit-border-radius: 3px 3px 0 0;
+    -moz-border-radius: 3px 3px 0 0;
+    -ms-border-radius: 3px 3px 0 0;
+    -o-border-radius: 3px 3px 0 0;
+    border-radius: 3px 3px 0 0;
+    background: #0d0d0d;
+    z-index: 9999;
+    -webkit-transition: background-color 0.3s;
+    -moz-transition: background-color 0.3s;
+    -o-transition: background-color 0.3s;
+    transition: background-color 0.3s;
+}
+.go-top span {
+    font-weight: normal!important;
+    line-height: 1;
+    color: white;
+    top: 17px;
+    left: 17px;
+    position: absolute;
+    font-size: 16px;
+}
+.go-top:hover {
+    background-color: #333;
 }
