--- a/_/components/less/_mystyles.less
+++ b/_/components/less/_mystyles.less
@@ -50,6 +50,17 @@ body {
     text-align: center;
     color: #fff;
 }
+#inter3 { 
+    background: url(../../images/backgrounds/ross-island-bridge-2000x736.jpg) 50% 0 fixed; 
+    height: 300px;  
+    margin: 0 auto; 
+    width: 100%; 
+    position: relative; 
+    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    padding: 100px 0;
+    text-align: center;
+    color: #fff;
+}
 #item { 
 	height: auto;  
 	margin: 0 auto; 
