--- a/_/components/less/_mystyles.less
+++ b/_/components/less/_mystyles.less
@@ -15,7 +15,8 @@ body {
 	margin: 0 auto; 
     width: 100%; 
     position: relative; 
-    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    /*box-shadow: 0 0 50px rgba(0,0,0,0.8);*/
+    /*box-shadow: inset 0 0 50px #000;*/
     padding: 100px 0;
     text-align: center;
     color: #fff;
@@ -25,7 +26,8 @@ body {
 	margin: 0 auto; 
     width: 100%; 
     position: relative; 
-    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    box-shadow: 0 0 50px #000;
+    z-index: 999;
     padding: 100px 0;
 }
 #inter1 { 
@@ -34,7 +36,8 @@ body {
 	margin: 0 auto; 
     width: 100%; 
     position: relative; 
-    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    /*box-shadow: 0 0 50px rgba(0,0,0,0.8);*/
+    /*box-shadow: inset 0 0 50px #000;*/
     padding: 100px 0;
     text-align: center;
     color: #fff;
@@ -45,7 +48,8 @@ body {
     margin: 0 auto; 
     width: 100%; 
     position: relative; 
-    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    /*box-shadow: 0 0 50px rgba(0,0,0,0.8);*/
+    /*box-shadow: inset 0 0 50px #000;*/
     padding: 100px 0;
     text-align: center;
     color: #fff;
@@ -56,7 +60,8 @@ body {
     margin: 0 auto; 
     width: 100%; 
     position: relative; 
-    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    /*box-shadow: 0 0 50px rgba(0,0,0,0.8);*/
+    /*box-shadow: inset 0 0 50px #000;*/
     padding: 100px 0;
     text-align: center;
     color: #fff;
@@ -66,8 +71,9 @@ body {
 	margin: 0 auto; 
     width: 100%; 
     position: relative; 
-    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    box-shadow: 0 0 50px #000;
     padding: 200px 0;
+    z-index: 999;
 }
 #item img {
     width: 200%;
