Fixed footer. Added new background assets.

--- a/_/components/less/_mystyles.less
+++ b/_/components/less/_mystyles.less
@@ -103,7 +103,7 @@ body {
     background-color: #777;
 }
 footer {
-    padding: 2em 0;
+    padding: 1.6em 0 .6em;
     text-align: center;
 }
 .go-top {
