Added contact form.

--- a/_/components/less/_mystyles.less
+++ b/_/components/less/_mystyles.less
@@ -6,6 +6,9 @@ body {
 	padding-top: 50px;
 	font-family: 'Raleway', sans-serif;
 }
+.alert {
+    margin: 20px 0 -26px 0;
+}
 .thumbnail {
 	border: none;
 }
